style: added border radius on header top borders to fix overflow from main

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,6 +3,7 @@ header {
   background-color: var(--teal);
   padding: 0.5rem 1rem;
   border-bottom: 1px solid var(--black);
+  border-radius: 8px 8px 0 0;
 }
 
 header,
